--- a/src/App.css
+++ b/src/App.css
@@ -8,15 +8,27 @@
   pointer-events: none;
 }
 
-.App-header {
-  background-color: #282c34;
+.App-content {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+
+.App-content button {
+  font-size: 18px;
+}
+
+.App-content form {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.App-content form input {
+  font-size: 15px;
+  margin: 0 10px;
 }
 
 .App-link {
